tests/snapshots/schema_cli__schema_tasks_add.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {
      "assignee": {
        "description": "Who it waits on: a name or an email, only ms-todo sees it and nobody is told. The task is made \"waiting on others\" too, which the To Do app shows",
        "type": "string",
        "x-cli": "--assignee"
      },
      "body": {
        "description": "Notes, as plain text",
        "type": "string",
        "x-cli": "--body"
      },
      "body_file": {
        "description": "Notes from a file, as plain text; `-` reads stdin",
        "type": "string",
        "x-cli": "--body-file"
      },
      "categories": {
        "description": "A category (an Outlook category's name); several give several. Over any @category in the text",
        "items": {
          "type": "string"
        },
        "type": "array",
        "x-cli": "--category"
      },
      "create_categories": {
        "description": "Create an @category that isn't one of your Outlook categories yet. Without it the task still gets the name, which Outlook shows without a colour",
        "type": "boolean",
        "x-cli": "--create-categories"
      },
      "defer": {
        "description": "Hide it until this day, over any ^date in the text, in the forms --due takes: fri, next week, in 3 days, 2026-10-02. Only ms-todo hides it; the due date stays the deadline",
        "type": "string",
        "x-cli": "--defer"
      },
      "dry_run": {
        "description": "Show what would be sent without changing anything",
        "type": "boolean",
        "x-cli": "--dry-run"
      },
      "due": {
        "description": "Due date, over any in the text: 2026-10-02, today, tomorrow, fri, next mon, in 3 days, +2w, 12 oct, 12/10 (day first), end of month. Due dates have no time; put a time in --reminder",
        "type": "string",
        "x-cli": "--due"
      },
      "idempotency_key": {
        "description": "Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2",
        "type": "string",
        "x-cli": "--idempotency-key"
      },
      "importance": {
        "description": "How important it is, over any p1–p4 in the text: 1 or p1 (high), 2, 3, p2 or p3 (normal), 4 or p4 (low), or high, normal or low",
        "type": "string",
        "x-cli": "--importance"
      },
      "keep_status": {
        "description": "With --assignee: don't make it \"waiting on others\"",
        "type": "boolean",
        "x-cli": "--keep-status"
      },
      "list": {
        "description": "The list's exact name or its ID, over any #List in the text [default: the \"Tasks\" list]",
        "type": "string",
        "x-cli": "--list"
      },
      "my_day": {
        "description": "Put it in today's My Day, as +myday or * in the text does. With no due date, it's due today too",
        "type": "boolean",
        "x-cli": "--my-day"
      },
      "nag": {
        "description": "Once its reminder is due, notify me on this machine every so often until it's done, as +nag15m in the text does: 15m, 1h, 1h30m (5m to 24h). Needs a reminder",
        "type": "string",
        "x-cli": "--nag"
      },
      "no_parse": {
        "description": "Take the text as the title, exactly as given: for text you didn't type yourself, such as an agent's, with flags for the fields",
        "type": "boolean",
        "x-cli": "--no-parse"
      },
      "recur": {
        "description": "Repeat it, over any `every …` in the text: every mon, every 2 weeks on tue, thu, every month on the 1st, weekday, daily. It's first due on --due, or the next day it falls on",
        "type": "string",
        "x-cli": "--recur"
      },
      "reminder": {
        "description": "Remind me at this local time, over any in the text: 17:30 (the next one), tomorrow 9am, fri 5:30pm, 2026-10-02 09:30. A day alone, such as tomorrow or in 2 days, is 09:00 on it",
        "type": "string",
        "x-cli": "--reminder"
      },
      "someday": {
        "description": "Park it as Someday, as +someday in the text does: hidden until you take it out with `tasks edit --no-someday`",
        "type": "boolean",
        "x-cli": "--someday"
      },
      "start": {
        "description": "Start date, over any `start <date>` in the text, in the forms --due takes. With no due date, Microsoft To Do makes it the due date too",
        "type": "string",
        "x-cli": "--start"
      },
      "steps": {
        "description": "A step to add with it; repeat for several, in order. Over any steps after \" :: \" in the text",
        "items": {
          "type": "string"
        },
        "type": "array",
        "x-cli": "--step"
      },
      "strict": {
        "description": "Refuse (exit 2) text the parser warns about, such as an unknown #List, instead of adding the task with a note",
        "type": "boolean",
        "x-cli": "--strict"
      },
      "text": {
        "description": "The task, as you'd say it. Read out of it: #List or #\"Two words\" (its name or a prefix only it has), @category, p1–p4, every … (a recurrence), !time-or-date (a reminder), ^date (hidden until then), +someday, +myday, start <date>, and a date and time (the due date, `due` before it or not; a time also sets a reminder then; eod is 17:00, and morning 09:00 and evening 19:00 beside a day). Steps go last, after \" :: \", split on \";\": `Pack :: passport; charger`. \"Quoted text\" and \\# \\@ \\! \\^ stay as typed. What's left is the title",
        "type": "string",
        "x-cli": "<TEXT>"
      }
    },
    "required": [
      "text"
    ],
    "type": "object"
  },
  "output": {
    "oneOf": [
      {
        "properties": {
          "action": {
            "enum": [
              "add",
              "complete",
              "reopen",
              "edit",
              "delete",
              "undo",
              "move",
              "my_day_add",
              "my_day_remove",
              "my_day_rollover",
              "step_add",
              "step_edit",
              "step_check",
              "step_uncheck",
              "step_delete",
              "link_add",
              "link_edit",
              "link_delete",
              "attachment_add",
              "attachment_delete",
              "relate",
              "unrelate",
              "merge_list"
            ]
          },
          "items": {
            "description": "Each task as ms-todo has it now, sync_state pending until the write reaches Microsoft To Do; for delete, as it was",
            "items": {
              "description": "A task: every field Microsoft Graph returns, with `id` replaced",
              "properties": {
                "attachments": {
                  "description": "Its attachments' metadata, as `attachments list` gives it without `index`; absent until a sync has fetched it",
                  "items": {
                    "type": "object"
                  },
                  "type": "array"
                },
                "body": {
                  "type": "object"
                },
                "categories": {
                  "items": {
                    "type": "string"
                  },
                  "type": "array"
                },
                "createdDateTime": {
                  "type": "string"
                },
                "defer_until": {
                  "description": "YYYY-MM-DD, a local day: the task is hidden from everyday views until then (ms-todo's own; the To Do apps don't hide it). On its day it shows again",
                  "type": [
                    "string",
                    "null"
                  ]
                },
                "dueDateTime": {
                  "description": "Graph's dateTimeTimeZone; a date only",
                  "type": "object"
                },
                "extensions": {
                  "description": "ms-todo's own open extension (com.planetaryescape.mstodo), when it has one and it has been fetched. A task's may hold myDay, myDayDueSet, assignee, assigneeStatusSet and nag (minutes between nag reminders)",
                  "items": {
                    "type": "object"
                  },
                  "type": "array"
                },
                "graph_id": {
                  "description": "Microsoft Graph's ID, for `raw` and debugging; commands take it too",
                  "type": [
                    "string",
                    "null"
                  ]
                },
                "id": {
                  "description": "ms-todo's local ID; stable, and what commands take",
                  "type": "string"
                },
                "importance": {
                  "enum": [
                    "low",
                    "normal",
                    "high"
                  ]
                },
                "isReminderOn": {
                  "type": "boolean"
                },
                "lastModifiedDateTime": {
                  "type": "string"
                },
                "list_id": {
                  "description": "The local ID of the task's list",
                  "type": "string"
                },
                "recurrence": {
                  "type": "object"
                },
                "reminderDateTime": {
                  "type": "object"
                },
                "someday": {
                  "description": "Parked as Someday: hidden from everyday views until taken out (ms-todo's own)",
                  "type": "boolean"
                },
                "status": {
                  "description": "notStarted, waitingOnOthers or completed, among Graph's values",
                  "type": "string"
                },
                "sync_state": {
                  "description": "From its outbox writes: synced; pending (queued or being sent); unknown (a write may or may not have reached Microsoft To Do; never retry it, see `outbox list`); failed (a write was rejected and rolled back; see `outbox list`)",
                  "enum": [
                    "synced",
                    "pending",
                    "unknown",
                    "failed"
                  ]
                },
                "title": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "graph_id",
                "sync_state",
                "list_id",
                "title",
                "defer_until",
                "someday"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "list_ids": {
            "description": "The local ID of each item's list, in order",
            "items": {
              "type": "string"
            },
            "type": "array"
          },
          "op_id": {
            "description": "What `undo` and `outbox list` know the change by",
            "type": "string"
          },
          "refused": {
            "description": "For an undo of a change to several tasks: those left alone because a field it set has changed since",
            "items": {
              "properties": {
                "id": {
                  "type": "string"
                },
                "reason": {
                  "type": "string"
                },
                "title": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "title",
                "reason"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "rolled": {
            "description": "Recurring tasks completed: still open, due on the next date",
            "items": {
              "properties": {
                "id": {
                  "type": "string"
                },
                "next_due": {
                  "format": "date",
                  "type": "string"
                }
              },
              "required": [
                "id",
                "next_due"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "schema_version": {
            "const": 2
          },
          "undoes": {
            "description": "For an undo: the op_id it undoes",
            "type": "string"
          }
        },
        "required": [
          "schema_version",
          "op_id",
          "action",
          "items",
          "list_ids"
        ],
        "type": "object"
      },
      {
        "properties": {
          "action": {
            "enum": [
              "add",
              "complete",
              "reopen",
              "edit",
              "delete",
              "move",
              "my_day_add",
              "my_day_remove",
              "my_day_rollover",
              "step_add",
              "step_edit",
              "step_check",
              "step_uncheck",
              "step_delete",
              "link_add",
              "link_edit",
              "link_delete",
              "attachment_add",
              "attachment_delete",
              "relate",
              "unrelate",
              "merge_list"
            ]
          },
          "changes": {
            "description": "The Graph fields each target gets; null for delete. For My Day: myDay (the day, or null), and the tasks whose due date is set (due_today) or cleared (due_cleared). For steps, links and attachments: each write, as { collection, verb (create, update or delete), id, body, carried }, and for an attachment's create the file it's read from, as file: { path, bytes, modified }, or the url it's downloaded from. For relate and unrelate: each task's local ID, with the Graph IDs of its related tasks after it. For move and merge_list: list_id, the list they go to"
          },
          "dry_run": {
            "const": true
          },
          "list": {
            "properties": {
              "created_at": {
                "description": "For a task: when Graph created it",
                "type": "string"
              },
              "id": {
                "type": "string"
              },
              "list_id": {
                "description": "For a task: its list's local ID",
                "type": "string"
              },
              "name": {
                "type": "string"
              }
            },
            "required": [
              "id",
              "name"
            ],
            "type": "object"
          },
          "lists": {
            "description": "For lists merge: the list emptied, with changes { deleted (whether --delete-source deletes it), completed_left (completed tasks staying in it) }",
            "items": {
              "properties": {
                "changes": {},
                "id": {
                  "type": "string"
                },
                "name": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "name",
                "changes"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "schema_version": {
            "const": 2
          },
          "targets": {
            "items": {
              "properties": {
                "id": {
                  "type": "string"
                },
                "list_id": {
                  "type": "string"
                },
                "title": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "title",
                "list_id"
              ],
              "type": "object"
            },
            "type": "array"
          }
        },
        "required": [
          "schema_version",
          "dry_run",
          "action",
          "changes"
        ],
        "type": "object"
      }
    ]
  }
}
