tests/snapshots/schema_cli__schema_tasks_delete.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {
      "dry_run": {
        "description": "Show what would change without changing anything",
        "type": "boolean",
        "x-cli": "--dry-run"
      },
      "idempotency_key": {
        "description": "Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2",
        "type": "string",
        "x-cli": "--idempotency-key"
      },
      "list": {
        "description": "Look for the tasks in this list (exact name or ID), which also lets TASK be an exact title",
        "type": "string",
        "x-cli": "--list"
      },
      "tasks": {
        "description": "Task IDs from `tasks list`, or exact titles when --list is given. `-` reads IDs from stdin, one per line",
        "items": {
          "type": "string"
        },
        "type": "array",
        "x-cli": "<TASK>"
      },
      "yes": {
        "description": "Delete without asking",
        "type": "boolean",
        "x-cli": "--yes"
      }
    },
    "required": [
      "tasks"
    ],
    "type": "object"
  },
  "output": {
    "oneOf": [
      {
        "properties": {
          "action": {
            "enum": [
              "add",
              "complete",
              "reopen",
              "edit",
              "delete",
              "undo",
              "move",
              "my_day_add",
              "my_day_remove",
              "my_day_rollover",
              "step_add",
              "step_edit",
              "step_check",
              "step_uncheck",
              "step_delete",
              "link_add",
              "link_edit",
              "link_delete",
              "attachment_add",
              "attachment_delete",
              "relate",
              "unrelate",
              "merge_list"
            ]
          },
          "items": {
            "description": "Each task as ms-todo has it now, sync_state pending until the write reaches Microsoft To Do; for delete, as it was",
            "items": {
              "description": "A task: every field Microsoft Graph returns, with `id` replaced",
              "properties": {
                "attachments": {
                  "description": "Its attachments' metadata, as `attachments list` gives it without `index`; absent until a sync has fetched it",
                  "items": {
                    "type": "object"
                  },
                  "type": "array"
                },
                "body": {
                  "type": "object"
                },
                "categories": {
                  "items": {
                    "type": "string"
                  },
                  "type": "array"
                },
                "createdDateTime": {
                  "type": "string"
                },
                "defer_until": {
                  "description": "YYYY-MM-DD, a local day: the task is hidden from everyday views until then (ms-todo's own; the To Do apps don't hide it). On its day it shows again",
                  "type": [
                    "string",
                    "null"
                  ]
                },
                "dueDateTime": {
                  "description": "Graph's dateTimeTimeZone; a date only",
                  "type": "object"
                },
                "extensions": {
                  "description": "ms-todo's own open extension (com.planetaryescape.mstodo), when it has one and it has been fetched. A task's may hold myDay, myDayDueSet, assignee, assigneeStatusSet and nag (minutes between nag reminders)",
                  "items": {
                    "type": "object"
                  },
                  "type": "array"
                },
                "graph_id": {
                  "description": "Microsoft Graph's ID, for `raw` and debugging; commands take it too",
                  "type": [
                    "string",
                    "null"
                  ]
                },
                "id": {
                  "description": "ms-todo's local ID; stable, and what commands take",
                  "type": "string"
                },
                "importance": {
                  "enum": [
                    "low",
                    "normal",
                    "high"
                  ]
                },
                "isReminderOn": {
                  "type": "boolean"
                },
                "lastModifiedDateTime": {
                  "type": "string"
                },
                "list_id": {
                  "description": "The local ID of the task's list",
                  "type": "string"
                },
                "recurrence": {
                  "type": "object"
                },
                "reminderDateTime": {
                  "type": "object"
                },
                "someday": {
                  "description": "Parked as Someday: hidden from everyday views until taken out (ms-todo's own)",
                  "type": "boolean"
                },
                "status": {
                  "description": "notStarted, waitingOnOthers or completed, among Graph's values",
                  "type": "string"
                },
                "sync_state": {
                  "description": "From its outbox writes: synced; pending (queued or being sent); unknown (a write may or may not have reached Microsoft To Do; never retry it, see `outbox list`); failed (a write was rejected and rolled back; see `outbox list`)",
                  "enum": [
                    "synced",
                    "pending",
                    "unknown",
                    "failed"
                  ]
                },
                "title": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "graph_id",
                "sync_state",
                "list_id",
                "title",
                "defer_until",
                "someday"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "list_ids": {
            "description": "The local ID of each item's list, in order",
            "items": {
              "type": "string"
            },
            "type": "array"
          },
          "op_id": {
            "description": "What `undo` and `outbox list` know the change by",
            "type": "string"
          },
          "refused": {
            "description": "For an undo of a change to several tasks: those left alone because a field it set has changed since",
            "items": {
              "properties": {
                "id": {
                  "type": "string"
                },
                "reason": {
                  "type": "string"
                },
                "title": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "title",
                "reason"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "rolled": {
            "description": "Recurring tasks completed: still open, due on the next date",
            "items": {
              "properties": {
                "id": {
                  "type": "string"
                },
                "next_due": {
                  "format": "date",
                  "type": "string"
                }
              },
              "required": [
                "id",
                "next_due"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "schema_version": {
            "const": 2
          },
          "undoes": {
            "description": "For an undo: the op_id it undoes",
            "type": "string"
          }
        },
        "required": [
          "schema_version",
          "op_id",
          "action",
          "items",
          "list_ids"
        ],
        "type": "object"
      },
      {
        "properties": {
          "action": {
            "enum": [
              "add",
              "complete",
              "reopen",
              "edit",
              "delete",
              "move",
              "my_day_add",
              "my_day_remove",
              "my_day_rollover",
              "step_add",
              "step_edit",
              "step_check",
              "step_uncheck",
              "step_delete",
              "link_add",
              "link_edit",
              "link_delete",
              "attachment_add",
              "attachment_delete",
              "relate",
              "unrelate",
              "merge_list"
            ]
          },
          "changes": {
            "description": "The Graph fields each target gets; null for delete. For My Day: myDay (the day, or null), and the tasks whose due date is set (due_today) or cleared (due_cleared). For steps, links and attachments: each write, as { collection, verb (create, update or delete), id, body, carried }, and for an attachment's create the file it's read from, as file: { path, bytes, modified }, or the url it's downloaded from. For relate and unrelate: each task's local ID, with the Graph IDs of its related tasks after it. For move and merge_list: list_id, the list they go to"
          },
          "dry_run": {
            "const": true
          },
          "list": {
            "properties": {
              "created_at": {
                "description": "For a task: when Graph created it",
                "type": "string"
              },
              "id": {
                "type": "string"
              },
              "list_id": {
                "description": "For a task: its list's local ID",
                "type": "string"
              },
              "name": {
                "type": "string"
              }
            },
            "required": [
              "id",
              "name"
            ],
            "type": "object"
          },
          "lists": {
            "description": "For lists merge: the list emptied, with changes { deleted (whether --delete-source deletes it), completed_left (completed tasks staying in it) }",
            "items": {
              "properties": {
                "changes": {},
                "id": {
                  "type": "string"
                },
                "name": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "name",
                "changes"
              ],
              "type": "object"
            },
            "type": "array"
          },
          "schema_version": {
            "const": 2
          },
          "targets": {
            "items": {
              "properties": {
                "id": {
                  "type": "string"
                },
                "list_id": {
                  "type": "string"
                },
                "title": {
                  "type": "string"
                }
              },
              "required": [
                "id",
                "title",
                "list_id"
              ],
              "type": "object"
            },
            "type": "array"
          }
        },
        "required": [
          "schema_version",
          "dry_run",
          "action",
          "changes"
        ],
        "type": "object"
      }
    ]
  }
}
